[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Non UI part of relm"
license = "MIT"
name = "relm-state"
repository = "https://github.com/antoyo/relm"
version = "0.12.0"
[dependencies]
glib = "^0.4.1"
glib-itc = "^0.4.0"
log = "^0.3.7"
#may = "^0.2.0"
may = { git = "https://github.com/Xudong-Huang/may.git" }

[dependencies.relm-core]
path = "../relm-core"
version = "^0.12.0"

[features]
use_impl_trait = []
